# identity_platform

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  podman-compose.yml
.agent/: rules.md
.agent/workflows/: improve-test-coverage.md
backend/: .vulture_whitelist.py  Containerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 3d4645e08386_add_missing_tables.py  817c8fe04b7c_initial_migration.py
backend/src/: main.py
backend/src/authz/domain/: models.py
backend/src/identity/: metrics.py
backend/src/identity/api/: __init__.py  approvals.py  auth.py  clients.py  internal.py  schemas.py
backend/src/identity/ca/: __init__.py  certificate_generator.py  crypto.py  key_manager.py
backend/src/identity/domain/: models.py  state_machine.py  state_machines.py  states.py
backend/src/identity/repository/: __init__.py  repositories.py
backend/src/identity/services/: __init__.py  approval_service.py  bootstrap.py  certificate_service.py  client_service.py
backend/src/shared/: config.py  database.py  logging.py  metrics.py  security.py
backend/tests/: test_approval_service.py  test_auth.py  test_bootstrap.py  test_ca.py  test_client_service.py  test_domain_transitions.py  test_invariants.py  test_security.py  test_shared.py  test_state_machines.py
backlog/: m2m-idp-requirements-v2.md
backlog/phase3/: codebase_analysis.md
